# SECS-II-Serialization

./: .gitmodules  CITATION.cff  CMakeLists.txt  README.md
.github/workflows/: cmake-gtest.yaml
include/secs2/: secs2.h
src/: CMakeLists.txt  secs2.cpp  sml.cpp  sml.h  traits.h
src/byte/: length.cpp  length.h  read.cpp  read.h  write.cpp  write.h
tests/: CMakeLists.txt  secs2_tests.cpp
